fix link to profile, change to dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 body {
   margin: 0;
   padding: 0;
+
+}
+html {
+  background-color: #1f1f1f;
 }
 
 .App-logo {
